# traveling-crab

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: bencher.yml  ci.yml
crates/tsp-core/: Cargo.toml  README.md
crates/tsp-core/src/: lib.rs  tsp_lib_spec.rs
crates/tsp-core/src/instance/: distances.rs  mod.rs
crates/tsp-core/src/instance/distance/: mod.rs
crates/tsp-core/src/instance/edge/: data.rs  distance.rs  mod.rs
crates/tsp-core/src/instance/edge/data/: mod.rs  symmetric.rs
crates/tsp-core/src/instance/matrix/: mod.rs  symmetric.rs
crates/tsp-macros/: Cargo.toml  README.md
crates/tsp-macros/src/: lib.rs
crates/tsp-parser/: Cargo.toml  README.md
crates/tsp-parser/benches/: parse_and_compute_dist.rs  parse_into_matrix.rs  parser_bench.rs
crates/tsp-parser/src/: lib.rs
crates/tsp-parser/src/data_section/: distance_function.rs  mod.rs
crates/tsp-parser/src/distance_container/: matrix_sym.rs  mod.rs
crates/tsp-parser/src/distance_data/: mod.rs
crates/tsp-parser/src/metadata/: mod.rs
crates/tsp-parser/src/metadata_parser/: metadata_builder.rs  mod.rs
crates/tsp-parser/tests/it/: check_canonical_tour_length.rs  check_matrix_parsing.rs  mod.rs  parse_and_compute_dist.rs  parse_without_error.rs
crates/tsp-parser/tests/test_assets/distances/: 12.txt  berlin52.txt  d493.txt
crates/tsp-parser/tests/test_assets/symmetric_matrices/: README.md  d198.txt  ulysses22.txt
crates/tsp-parser/tests/test_assets/tour_lengths/: README.md
crates/tsp-rs/: Cargo.toml
crates/tsp-rs/src/: main.rs
crates/tsp-rust/: Cargo.toml
crates/tsp-rust/src/: main.rs
crates/tsp-solvers/: Cargo.toml
instances/bench/: 12.tsp  results.txt
src/: main.rs
(+12 files in other folders)
