[package]
name = "tsp-core"
version = "0.1.0"
description = "Types and utilities for TSP."

keywords = ["tsp", "algorithms", "graphs", "networks"]
categories = ["algorithms"]

readme.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true